--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
  # Byte-compiled / optimized / DLL files
- .env
+ # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
 *$py.class
+scratches/
 
 # C extensions
 *.so
@@ -158,4 +159,10 @@ cython_debug/
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
-#.idea/
+.idea/
+
+#allure
+allure-results
+allure-results
+allure
+.env
